# aegis-controlrisk-v2

./: .env.example  .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  COMMERCIAL.md  CONTRIBUTING.md  DATA.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  aegis_cli.py  app.py  bug_test.py  config.py  pyproject.toml  requirements.txt  run_tests.py  smoke_test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  licensing_inquiry.md
.github/workflows/: ci.yml
aegis/: __init__.py  pipeline.py  schemas.py
aegis/alerts/: notifier.py  rules.py
aegis/audit/: confidence_bands.py  provenance.py  snapshots.py
aegis/backtesting/: backtest_runner.py  case_study_generator.py  historical.py  metrics.py
aegis/data/: loader.py  synthetic_data.py
aegis/ingest/: activists.py  edgar.py  sources.py  yahoo.py
aegis/parallel/: batch_runner.py  disk_cache.py
aegis/reports/: executive_view.py  markdown_export.py  memo_generator.py  question_views.py  war_room.py
aegis/scanning/: __init__.py
aegis/scoring/: activist_dna.py  bank_opportunity.py  claim_graph.py  defense.py  directors.py  final_score.py  fixability.py  legal_calendar.py  nominee_matchup.py  proxy_advisor_shadow.py  settlement_game.py  shareholders.py  swing_shareholders.py  thesis.py  trigger_monitor.py  vulnerability.py
aegis/simulation/: causal_twin.py  counterfactuals.py  distributions.py  market_reaction.py  proxy_monte_carlo.py
aegis/utils/: confidence.py  evidence.py  explainability.py  normalization.py
aegis/workflow/: workspaces.py
data/: sample_activist_archetypes.csv  sample_campaigns.csv  sample_companies.csv  sample_directors.csv  sample_events.csv  sample_financials.csv  sample_ownership.csv  sample_proxy_advisor_cases.csv  sample_shareholders.csv
reports/: sample_INDC_banker_pitch.md  sample_INDC_blue_team_defense.md  sample_INDC_board_memo.md  sample_INDC_red_team_attack.md
tests/: __init__.py  _pytest_shim.py  test_edgar_ingest.py  test_new_modules.py  test_scoring.py  test_simulation.py  test_unique_features.py  test_v21_features.py
